2001-04-04  Sven Wischnowsky  <wischnow@zsh.org>

	* 13902: Completion/Base/Utility/_arguments,
	Completion/X/Utility/_x_arguments,
	Completion/X/Utility/_xt_arguments, Doc/Zsh/compsys.yo: add -W
	option to _arguments, which allows to complete options after
	options that take an argument in the next word

2000-04-03  Clint Adams  <schizo@debian.org>

	* 13899: Completion/Unix/Command/_apm: add $OSTYPE checking.

2001-04-03  Oliver Kiddle  <opk@zsh.org>

	* 13898, Bart: 13827: Completion/Zsh/Command/_ttyctl,
	Completion/Zsh/Command/_ulimit,	Completion/Zsh/Command/_vared:
	new completion functions
	
2001-04-03  Sven Wischnowsky  <wischnow@zsh.org>

	* 13892: Src/Zle/compmatch.c, Test/comptest, Test/ztst.zsh:
	two more places where fpaths to completion functions were used;
	follow-up on 13868, fix the fix

2001-04-02  Clint Adams  <schizo@debian.org>

	* 13889: Completion/Linux/_apm, Completion/Linux/.distfiles,
	Completion/Unix/Command/_apm, Completion/Unix/Command/.distfiles:
	Add OpenBSD 2.7 apm options.  Move to Unix/Command.

2001-04-02  Bart Schaefer  <schaefer@zsh.org>

	* 13887: Config/installfns.sh: Skip CVS subdirectories.

2001-04-02  Clint Adams  <schizo@debian.org>

	* 13884: Completion/Linux/_apm: Add FreeBSD 4.1 apm options.

2001-04-02  Sven Wischnowsky  <wischnow@zsh.org>

	* Config/installfns.sh, Src/zsh.mdd: more cleanup after
	function moving

	* unposted, kind of: moving functions and scripts around, renaming
	them, accidentally deleted them and re-installing them, etc.

	* 13868: Src/Zle/compmatch.c, Src/Zle/computil.c: make
	`_arguments -S' still complete long options after `--<TAB>';
	fix for cursor positioning with partial word match specs

2001-04-02  Clint Adams  <schizo@debian.org>

 	* 13866: Completion/Debian/_apt: complete a release
	name after apt-get install <pkgname>/.

	* 13864: Completion/Debian/_apt: complete a
	"release" name after apt-get -t.

2001-04-01  Oliver Kiddle  <opk@zsh.org>
